--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.29.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uui": "^1.0.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
